<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>qa.homeworks</groupId>
    <artifactId>Gudovich-homework</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <checkstyle.version>8.42</checkstyle.version>
        <maven-checkstyle-plugin.version>3.1.2</maven-checkstyle-plugin.version>
        <selenium-java.version>4.0.0</selenium-java.version>
        <testng.version>7.4.0</testng.version>
        <allure.version>2.16.0</allure.version>
        <aspectj.version>1.9.7</aspectj.version>

        <assertj-core.version>3.21.0</assertj-core.version>
        <webdrivermanager.version>5.0.3</webdrivermanager.version>
        <cucumber-java.version>7.0.0</cucumber-java.version>

        <gson.version>2.8.9</gson.version>
        <hamcrest-core.version>2.2</hamcrest-core.version>
        <rest-assured.version>4.4.0</rest-assured.version>

        <jdi-light-html.version>1.3.17</jdi-light-html.version>
        <domain>https://jdi-testing.github.io/jdi-light/</domain>
        <jetty.version>9.4.12.RC2</jetty.version>
        <log.level>DEBUG</log.level>

    </properties>

    <dependencies>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testng.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj-core.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>calculator</groupId>
            <artifactId>calculator</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/src/main/resources/calculator-1.0.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>${selenium-java.version}</version>
        </dependency>

        <dependency>
            <groupId>io.github.bonigarcia</groupId>
            <artifactId>webdrivermanager</artifactId>
            <version>${webdrivermanager.version}</version>
        </dependency>

        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-testng</artifactId>
            <version>${allure.version}</version>
        </dependency>

        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>${cucumber-java.version}</version>
        </dependency>

        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-testng</artifactId>
            <version>${cucumber-java.version}</version>
        </dependency>

        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>rest-assured</artifactId>
            <version>${rest-assured.version}</version>
        </dependency>

        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-core</artifactId>
            <version>${hamcrest-core.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>${gson.version}</version>
        </dependency>

        <dependency>
            <groupId>com.ainrif.apiator</groupId>
            <artifactId>jakson-plugin-core-json-renderer</artifactId>
            <version>0.15.0</version>
        </dependency>

        <dependency>
            <groupId>org.awaitility</groupId>
            <artifactId>awaitility</artifactId>
            <version>3.0.0</version>
            <scope>test</scope>
        </dependency>
      
        <dependency>
            <groupId>com.epam.jdi</groupId>
            <artifactId>jdi-light-html</artifactId>
            <version>${jdi-light-html.version}</version>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${maven-checkstyle-plugin.version}</version>
                <dependencies>
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <version>${checkstyle.version}</version>
                    </dependency>
                </dependencies>
                <configuration>
                    <configLocation>
                        https://raw.githubusercontent.com/DmitryKhodakovsky/epam-training-center-code-checkers-configurations/main/checkstyle/checkstyle.xml
                    </configLocation>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <includeTestSourceDirectory>true</includeTestSourceDirectory>
                    <consoleOutput>true</consoleOutput>
                    <failsOnError>true</failsOnError>
                    <linkXRef>false</linkXRef>
                </configuration>
                <executions>
                    <execution>
                        <id>validate</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>
                    <argLine>
                        --illegal-access=warn
                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                    </argLine>
                    <suiteXmlFiles>
                        <suiteXmlFile>${project.basedir}/src/test/resources/com/epam/tc/${suit.xml.name}</suiteXmlFile>
                    </suiteXmlFiles>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.aspectj</groupId>
                        <artifactId>aspectjweaver</artifactId>
                        <version>${aspectj.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-maven</artifactId>
                <version>2.10.0</version>
            </plugin>
        </plugins>

        <resources>
            <resource>
                <directory>${project.basedir}/src/main/resources</directory>
            </resource>
            <resource>
                <directory>src/test/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <reporting>
        <excludeDefaults>true</excludeDefaults>
        <plugins>
            <plugin>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-maven</artifactId>
                <version>2.10.0</version>
                <configuration>
                    <reportVersion>${allure.version}</reportVersion>
                </configuration>
            </plugin>
        </plugins>
    </reporting>

    <profiles>
        <profile>
            <id>calculator-sum-subtract-test-suit</id>
            <properties>
                <suite.xml.name>hw1/CalculatorSumSubtractTestsSuit.xml</suite.xml.name>
            </properties>
        </profile>

        <profile>
            <id>calculator-multiply-divide-test-suit</id>
            <properties>
                <suite.xml.name>hw1/CalculatorMultiplyDivideTestsSuit.xml</suite.xml.name>
            </properties>
        </profile>

        <profile>
            <id>calculator-all-test-suit</id>
            <properties>
                <suite.xml.name>hw1/CalculatorAllTestsSuit.xml</suite.xml.name>
            </properties>
        </profile>

        <profile>
            <id>homework-03-all-tests-suit</id>
            <properties>
                <suite.xml.name>hw3/JdiAllTestSuit.xml</suite.xml.name>
            </properties>
        </profile>

        <profile>
            <id>homework-04-all-tests-suit</id>
            <properties>
                <suite.xml.name>hw4/Hw4JdiAllTestSuit.xml</suite.xml.name>
            </properties>
        </profile>

        <profile>
            <id>homework-05-all-tests-suit</id>
            <properties>
                <suite.xml.name>hw5/Hw5JdiAllTestSuit.xml</suite.xml.name>
            </properties>
        </profile>

        <profile>
            <id>homework-06-all-tests-suit</id>
            <properties>
                <suite.xml.name>hw6/Hw6JdiAllTestSuit.xml</suite.xml.name>
           </properties>
        </profile>

        <profile>
           <id>homework-07-jdi-test-suit</id>
           <properties>
               <suit.xml.name>hw7/JdiHwTestSuit.xml</suit.xml.name>
           </properties>
        </profile>
          
        <profile>
            <id>homework-09-api-all-tests-suit</id>
            <properties>
                <suite.xml.name>/hw9api/Hw9TrelloAllTestSuit.xml</suite.xml.name>
            </properties>
        </profile>

        <profile>
            <id>homework-09-petstore-api-all-tests-suit</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <suite.xml.name>/hw9petstore/Hw9PetstoreAllTestSuit.xml</suite.xml.name>
            </properties>
        </profile>
 
    </profiles>

</project>